# Llm-Research-Generation

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.jenkins  Jenkinsfile  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  main.py  pyproject.toml  render.yaml  requirements.txt  setup-app-infrastructure.sh  users.db
generated_report/ai_impact_in_2027_20260603_154716/: ai_impact_in_2027_20260603_154716.docx
generated_report/ai_impact_in_2027_job_market_20260603_153232/: ai_impact_in_2027_job_market_20260603_153232.docx
generated_report/how_will_india_become_superpower_20251103_161435/: how_will_india_become_superpower_20251103_161435.docx
generated_report/impact_of_gen_ai_in_2026_job_market_20251103_150755/: impact_of_gen_ai_in_2026_job_market_20251103_150755.docx
generated_report/impact_of_gen_ai_in_2026_job_market_20251104_160035/: impact_of_gen_ai_in_2026_job_market_20251104_160035.docx
research_and_analyst/api/: main.py
research_and_analyst/api/models/: requests_models.py
research_and_analyst/api/routes/: report_routes.py
research_and_analyst/api/services/: report_service.py
research_and_analyst/backend_server/: workflow.py
research_and_analyst/config/: configuration.yaml
research_and_analyst/notebook/: test.ipynb
research_and_analyst/prompt_lib/: prompt_locator.py  prompts.py
research_and_analyst/utils/: model_loader.py  retry.py
research_and_analyst/workflows/: interview_workflow.py  report_generator_workflow.py  report_generator_worklow.py
research_and_analyst/worklows/: report_generator_worklow.py
static/css/: styles.css
(+3 files in other folders)
