[project]
name = "llm-research-generation"
version = "0.1.0"
description = "Autonomous AI Report Generator using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.6.8",
    "langchain-community==0.3.30",
    "langchain-core==0.3.78",
    "langchain-openai==0.3.32",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "tavily-python==0.7.12",
    "wikipedia==1.4.0",
    "structlog==25.4.0",
    "python-docx==1.2.0",
    "reportlab==4.4.4",
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "aiofiles>=23.2.1",
    "sqlalchemy==2.0.43",
    "bcrypt==4.2.1",
    "passlib[bcrypt]==1.7.4",
    "langchain-tavily",
    "python-multipart",
    "python-dotenv",
]
